<resources>
    <string name="app_name">Story Time</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="detail_image">Signals from mars</string>
    <string name="start_button">Start your Adventure</string>
    <string name="edit_name">Enter your Name to Begin</string>
    <string name="title_activity_story">Stories</string>
    <string name="key_name">name</string>
    <string name="image_desc">story Image</string>
    <string name="choice_button1">Continue to Mars</string>
    <string name="choice_button2">Stop and Investigate</string>
    <string name="play_button">PLAY AGAIN</string>
    <string name="story_text">You continue your course to Earth. Two days later, you receive a transmission from HQ saying that they have detected some sort of anomaly on the surface of Mars near an abandoned rover. They ask you to investigate, but ultimately the decision is yours because your mission has already run much longer than planned and supplies are low.</string>
</resources>
