<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.johnkagga.storytime.StoryActivityFragment">

    <ImageView
        android:id="@+id/storyImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/page0"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_desc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/story_text"
        android:id="@+id/storyTextView"
        android:layout_below="@+id/storyImageView"
        android:layout_alignLeft="@+id/storyImageView"
        android:layout_alignStart="@+id/storyImageView"
        android:paddingTop="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:lineSpacingMultiplier="1.2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choice_button2"
        android:id="@+id/choicebutton2"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/storyTextView"
        android:layout_alignStart="@+id/storyTextView"
        android:background="@android:color/white"
        android:textColor="#ff3a8aec" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choice_button1"
        android:id="@+id/choiceButton1"
        android:layout_above="@+id/choicebutton2"
        android:layout_alignLeft="@+id/choicebutton2"
        android:layout_alignStart="@+id/choicebutton2"
        android:background="@android:color/white"
        android:textColor="#ff3a8aec" />
</RelativeLayout>
