<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivityFragment">


    <ImageView
        android:id="@+id/titleImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/detail_image"
        android:scaleType="fitXY"
        android:src="@drawable/main_title" />

    <Button
        android:id="@+id/startbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/start_button" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:hint="@string/edit_name"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:lines="1"
        android:contentDescription="your name" />
</RelativeLayout>
